fix cross-compile for 2.6 kernels
Fix cross-compile for 2.6 kernels.
Also, CONFIG_COMPAT is checked for 2.6 kernels.

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -9,7 +9,10 @@ mainsrcdir	= @srcdir@
 MAINSRCDIR	= @SRCDIR@
 
 CROSS_COMPILE   ?= @CROSS_COMPILE@
-ifndef NEW_KBUILD
+ARCH            ?= @ARCH@
+ifdef NEW_KBUILD
+export CROSS_COMPILE ARCH
+else
 AS		= $(CROSS_COMPILE)@AS@
 LD		= $(CROSS_COMPILE)@LD@
 CC		= $(CROSS_COMPILE)@CC@
