Fix build for sparc64
Fix build for sparc64.
Check of RTC kernel support is simplied, too.

--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -14,7 +14,7 @@ ifdef NEW_KBUILD
 export CROSS_COMPILE ARCH
 else
 AS		= $(CROSS_COMPILE)@AS@
-LD		= $(CROSS_COMPILE)@LD@
+LD		= $(CROSS_COMPILE)@KLD@
 CC		= $(CROSS_COMPILE)@CC@
 CPP		= $(CROSS_COMPILE)@CPP@
 AR		= $(CROSS_COMPILE)@AR@
