--- a/pci/Kconfig
+++ b/pci/Kconfig
@@ -36,15 +36,16 @@ config SND_EMU10K1X
 	  To compile this driver as a module, choose M here: the module
 	  will be called snd-emu10k1x.
 
-config SND_AUDIGYLS
-	tristate "SB Audigy LS"
+config SND_CA0106
+	tristate "SB Audigy LS / Live 24bit"
 	depends on SND
 	select SND_AC97_CODEC
 	help
-	  Say Y here to include support for the Sound Blaster Audigy LS.
+	  Say Y here to include support for the Sound Blaster Audigy LS
+	  and Live 24bit.
 
 	  To compile this driver as a module, choose M here: the module
-	  will be called snd-audigyls.
+	  will be called snd-ca0106.
 
 config SND_AZX
 	tristate "Intel HD Audio"
