Move snd-ca0106 driver to alsa-kernel
snd-ca0106 driver is moved to alsa-kernel now.

--- a/pci/ca0106/Makefile
+++ b/pci/ca0106/Makefile
@@ -5,8 +5,6 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-snd-ca0106-objs := ca0106_main.o ca0106_proc.o ca0106_mixer.o
-
-obj-$(CONFIG_SND_CA0106) += snd-ca0106.o
+include $(SND_TOPDIR)/alsa-kernel/pci/ca0106/Makefile
 
 include $(SND_TOPDIR)/Rules.make
