--- a/include/config.h.in
+++ b/include/config.h.in
@@ -53,3 +53,4 @@
 #undef CONFIG_HAVE_NEW_PCI_SAVE_STATE
 #undef CONFIG_HAVE_ACPI_REGISTER_GSI
 #undef CONFIG_HAVE_PCI_DEV_PRESENT
+#undef CONFIG_SND_HAVE_NEW_IOCTL
