Move snd-ioctl32 codes to alsa-driver
Moved the old snd-ioctl32 codes (for 2.6 kernel) to alsa-driver tree
to be compiled locally.

--- a/acore/Makefile
+++ b/acore/Makefile
@@ -12,6 +12,8 @@ include $(SND_TOPDIR)/alsa-kernel/core/Makefile
 
 snd-page-alloc-objs += memory_wrapper.o
 
+obj-$(CONFIG_SND_BIT32_EMUL) += ioctl32/
+
 include $(SND_TOPDIR)/Rules.make
 
 info.c: info.inc info.patch $(SND_TOPDIR)/alsa-kernel/core/info.c
