--- a/include/config.h.in
+++ b/include/config.h.in
@@ -51,6 +51,8 @@
 #undef CONFIG_OLD_REMAP_PAGE_RANGE
 #undef CONFIG_HAVE_PCI_SAVED_CONFIG
 #undef CONFIG_HAVE_NEW_PCI_SAVE_STATE
+#undef CONFIG_HAVE_MSLEEP
+#undef CONFIG_HAVE_MSLEEP_INTERRUPTIBLE
 #undef CONFIG_HAVE_ACPI_REGISTER_GSI
 #undef CONFIG_HAVE_PCI_DEV_PRESENT
 #undef CONFIG_SND_HAVE_NEW_IOCTL
