Add PC-speaker PCM driver support
Added PC-Speaker PCM driver support by Stas Sergeev.

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -11,6 +11,8 @@ snd-serialmidi-objs := serialmidi.o
 snd-aloop-objs := aloop.o
 snd-portman2x4-objs := portman2x4.o
 
+obj-$(CONFIG_SND) += pcsp/
+
 obj-$(CONFIG_SND_SERIALMIDI) += snd-serialmidi.o
 obj-$(CONFIG_SND_LOOPBACK) += snd-aloop.o
 obj-$(CONFIG_SND_PORTMAN2X4) += snd-portman2x4.o
