--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -30,3 +30,15 @@ config SND_PORTMAN2X4
 	select SND_RAWMIDI
 	help
 	  Say 'Y' or 'M' to include support for Portman 2x4.
+
+config SND_PCSP
+	tristate "Internal PC speaker support"
+	depends on SND && X86 && HAVE_PCSP_HOOK
+	help
+	  If you don't have a sound card in your computer, you can include a
+	  driver for the PC speaker which allows it to act like a primitive
+	  sound card.
+
+	  You can compile this as a module, which will be called snd-pcsp.
+
+	  You don't need this driver if you only want your computer to beep.
