--- a/configure.in
+++ b/configure.in
@@ -753,6 +753,8 @@ CONFIG_X86=
 CONFIG_ALPHA=
 CONFIG_L3=
 CONFIG_ARM=
+CONFIG_ARCH_SA1100=
+CONFIG_ARCH_PXA=
 CONFIG_PPC=
 CONFIG_SPARC32=
 CONFIG_SPARC64=
@@ -1052,6 +1054,7 @@ EOF
     c_opts="-march=armv4 -mtune=strongarm1100 -msoft-float"
     CONFIG_ARM=y
     CONFIG_L3=y
+    CONFIG_ARCH_SA1100=y
     test "$CONFIG_ISA" = "probe" && CONFIG_ISA=
     ;;
   pxa)
@@ -1059,6 +1062,7 @@ EOF
     c_opts="-O2 -mapcs-32 -march=armv4 -Wa,-mxscale -mtune=strongarm -mshort-load-bytes -msoft-float"
     CONFIG_ARM=y
     CONFIG_L3=y
+    CONFIG_ARCH_PXA=y
     test "$CONFIG_ISA" = "probe" && CONFIG_ISA=
     ;;
   parisc)
@@ -1157,6 +1161,8 @@ AC_SUBST(CONFIG_X86)
 AC_SUBST(CONFIG_ALPHA)
 AC_SUBST(CONFIG_L3)
 AC_SUBST(CONFIG_ARM)
+AC_SUBST(CONFIG_ARCH_SA1100)
+AC_SUBST(CONFIG_ARCH_PXA)
 AC_SUBST(CONFIG_PPC)
 AC_SUBST(CONFIG_SPARC32)
 AC_SUBST(CONFIG_SPARC64)
@@ -2012,6 +2018,10 @@ fi
 
 AC_SUBST(CONFIG_SND_BIT32_EMUL)
 test "$CONFIG_SND_BIT32_EMUL" = "m" && AC_DEFINE(CONFIG_SND_BIT32_EMUL_MODULE)
+
+dnl Check for PC-Speaker hook
+CHECK_KERNEL_CONFIG(CONFIG_HAVE_PCSP_HOOK, [PC-Speaker hook])
+AC_SUBST(CONFIG_HAVE_PCSP_HOOK)
 
 dnl PCMCIA stuff
 AC_ARG_WITH(pcmcia,
