--- a/usb/Makefile
+++ b/usb/Makefile
@@ -5,7 +5,7 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
-clean-files := usbaudio.c
+clean-files := usbaudio.c usbmidi.c usbmixer.c
 
 # for compatibility
 extra-snd-usb-lib-objs := usbcompat.o
@@ -18,3 +18,5 @@ EXTRA_CFLAGS += -I$(SND_TOPDIR)/alsa-kernel/usb
 include $(SND_TOPDIR)/Rules.make
 
 usbaudio.c: usbaudio.patch usbaudio.inc usbaudio.inc1 $(SND_TOPDIR)/alsa-kernel/usb/usbaudio.c
+usbmidi.c: usbmidi.patch usbmidi.inc usbmidi.inc1 $(SND_TOPDIR)/alsa-kernel/usb/usbmidi.c
+usbmixer.c: usbmixer.patch $(SND_TOPDIR)/alsa-kernel/usb/usbmixer.c
