--- a/include/config.h.in
+++ b/include/config.h.in
@@ -34,6 +34,7 @@
 #undef CONFIG_HAVE_OLD_REQUEST_MODULE
 #undef CONFIG_HAVE_STRLCPY
 #undef CONFIG_HAVE_SNPRINTF
+#undef CONFIG_HAVE_VSNPRINTF
 #undef CONFIG_HAVE_VMALLOC_TO_PAGE
 #undef CONFIG_HAVE_PDE
 #undef CONFIG_HAVE_TTY_COUNT_ATOMIC
