initial version of miroSOUND PCM1 pro, PCM12, PCM20 radio driver
- Two new Control Names introduced: "Radio" for the onboard radio and
"Tone Control - xxx (k)Hz" for an equalizer control.

- I've tried to write support for all three miroSOUND cards PCM1 pro,
PCM12 and PCM20 Radio, but only PCM12 (rev. E) is tested. Especially
OPTi929 cards are completely untested.

- These cards have two mixers: ACI and OPTi9xx. Both are merged into
one ALSA mixer device. That's different to OSS.

- OPL4 support is still missing, because I'm still waiting for response
of my broken OPL4 chip. :(

- I never saw any docs about the cards. All knowledge is taken from ACI
driver (OSS) and OPTi9xx (ALSA) drivers. I've done my best in copying
bugs from there to this new driver :)

Signed-off-by: Martin Langer <martin-langer@gmx.de>

--- a/isa/opti9xx/Makefile
+++ b/isa/opti9xx/Makefile
@@ -9,4 +9,8 @@ isapnp-files = opti92x-ad1848.isapnp opti92x-cs4231.isapnp opti93x.isapnp
 
 include $(SND_TOPDIR)/alsa-kernel/isa/opti9xx/Makefile
 
+snd-miro-objs := miro.o
+
+obj-$(CONFIG_SND_MIRO) += snd-miro.o
+
 include $(SND_TOPDIR)/Rules.make
