--- a/isa/cs423x/Makefile
+++ b/isa/cs423x/Makefile
@@ -13,5 +13,6 @@ include $(SND_TOPDIR)/alsa-kernel/isa/cs423x/Makefile
 
 snd-pc98-cs4232-objs := pc98.o
 obj-$(CONFIG_SND_PC98_CS4232) += snd-pc98-cs4232.o snd-cs4231-lib.o
+obj-$(CONFIG_SND_MIRO) += snd-cs4231-lib.o
 
 include $(SND_TOPDIR)/Rules.make
