--- a/arm/Makefile
+++ b/arm/Makefile
@@ -13,4 +13,8 @@ snd-pxa2xx-ac97-objs := pxa2xx-ac97.o
 obj-$(CONFIG_SND_PXA2XX_PCM) += snd-pxa2xx-pcm.o
 obj-$(CONFIG_SND_PXA2XX_AC97) += snd-pxa2xx-ac97.o
 
+snd-sa11x0-pcm-objs		:= sa11x0-pcm.o devdma.o
+
+obj-$(CONFIG_SND_S3C2410)	+= s3c24xx-iis.o
+
 include $(SND_TOPDIR)/Rules.make
